# thinking-recursively

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
thinking_recursively/: combinations.py  factorial.py  min_max.py  permutations.py  sum.py
