[tool.poetry]
name = "thinking-recursively"
version = "0.1.0"
description = "A set of solutions to problems that can utilise recursion"
authors = ["Heuristic Pedals <heuristicpedals@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79

[tool.isort]
line_length = 79
